Map.of limitation solved with Map.ofEntries, Day 6 Challenge and Tests implemented